--- a/assets/scss/presets/_variables.scss
+++ b/assets/scss/presets/_variables.scss
@@ -1,4 +1,8 @@
-$ul: 1280px;
+$xxl: 1380px;
+$xl: 1200px;
 $lg: 992px;
-
+$md: 786px;
+$sm: 675px;
 $gap: 20px;
+$gap-sm: calc(#{$gap} / 2);
+$gap-lg: calc(#{$gap} * 1.5);
