закончили шапку? или под вопросом?

--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,19 +1,25 @@
+@use "../presets" as *;
+
+
 *,
 ::before,
-::after{
+::after {
   box-sizing: border-box;
 }
-html{
+html {
   font-size: 16px;
 }
-body{
-  font-family: 'Graphik LCG', sans-serif;
+body {
+  overflow-x: hidden;
+
+  max-width: 100%;
+
+  font-family: "Graphik LCG", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  max-width: 100%;
-  overflow-x: hidden;
 }
-a{
+a {
   text-decoration: none;
+
   color: $color-black;
 }
