--- a/assets/scss/sections/_main.scss
+++ b/assets/scss/sections/_main.scss
@@ -1,4 +1,8 @@
-.main{
+@use "../presets" as *;
+@use "../mixins/" as *;
+
+.main {
   min-width: 200px;
+
   background-color: $color-bg-accent;
 }
