--- a/assets/scss/common/_classes.scss
+++ b/assets/scss/common/_classes.scss
@@ -1,28 +1,30 @@
-.container{
+@use "../presets" as *;
+
+.container {
   max-width: $xxl;
-  padding-left: $gap;
-  padding-right: $gap;
   margin: 0 auto;
+  padding-right: $gap;
+  padding-left: $gap;
 }
 
-.btn{
+.btn {
+  display: block;
+
   min-width: 120px;
-  
-  border-radius: 0;
+  padding: 0.5em 1em;
+
   border-width: 1px;
-border-style: solid;
-display: block;
-padding: 0.5em 1em;
-
+  border-style: solid;
+  border-radius: 0;
 }
 
-.btn--light{
-  background-color: $color-white;
+.btn--light {
   border-color: rgba($color-black, 0.5);
+  background-color: $color-white;
 }
 
-.btn--accent{
-  background-color: $color-accent;
-  border-color: $color-accent;
+.btn--accent {
   color: $color-white;
+  border-color: $color-accent;
+  background-color: $color-accent;
 }
