--- a/assets/scss/presets/_skins.scss
+++ b/assets/scss/presets/_skins.scss
@@ -1,5 +1,5 @@
 $color-white: #ffffff;
 $color-black: #000000;
-$color-accent: #FF6336;
+$color-accent: #ff6336;
 $color-grey: #cccccc;
 $color-bg-accent: #ff9c7d;
