--- a/assets/scss/sections/header/_header-menu.scss
+++ b/assets/scss/sections/header/_header-menu.scss
@@ -1,36 +1,46 @@
+@use "../../presets" as *;
+@use "../../mixins/" as *;
+
 .header-menu {
+  display: flex;
+  align-items: center;
+
   padding-top: $gap-lg;
   padding-bottom: $gap-lg;
-  display: flex;
- 
-  align-items: center;
- 
-@include sm-min{
-  gap: 50px;
-  position: absolute;
-  top: 0;
-  left: $gap;
-  right: $gap;
-}
+
+  @include sm-min {
+    position: absolute;
+    top: 0;
+    right: $gap;
+    left: $gap;
+
+    gap: 50px;
+  }
   @include sm {
+    position: relative;
+
+    flex-direction: column;
+
     gap: $gap-lg;
-flex-direction: column;
-position: relative;
   }
 
   &::after {
-    content: "";
-    height: 1px;
-    width: 100vw;
-    left: 50%;
-    margin-left: -50vw;
-    bottom: 0;
-    background-color: $color-grey;
     position: absolute;
+    bottom: 0;
+    left: 50%;
+
+    width: 100vw;
+    height: 1px;
+    margin-left: -50vw;
+
+    content: "";
+
+    background-color: $color-grey;
   }
 
   &__actions {
     display: flex;
+
     gap: $gap-sm;
   }
 
@@ -38,58 +48,63 @@ position: relative;
     min-width: 120px;
   }
 
-&__hamburger {
-  width: 30px;
-  height: 22.5px;
-  position: relative;
-  margin: 0 auto;
+  &__hamburger {
+    position: relative;
 
-  transform: rotate(0deg);
+    width: 30px;
+    height: 22.5px;
+    margin: 0 auto;
 
-  transition: 0.5s ease-in-out;
-  cursor: pointer;
-
-  @include lg-min {
-    display: none;
-  }
-  &-row {
-    display: block;
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    background: $color-accent;
-    border-radius: 3px;
-    opacity: 1;
-    left: 0;
-
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
     transform: rotate(0deg);
 
-    transition: 0.25s ease-in-out;
+    @include lg-min {
+      display: none;
+    }
+    &-row {
+      position: absolute;
+      left: 0;
 
-    &:nth-child(1) {
-      top: 0px;
+      display: block;
+
+      width: 100%;
+      height: 3px;
+
+      transition: 0.25s ease-in-out;
+      transform: rotate(0deg);
+
+      opacity: 1;
+      border-radius: 3px;
+      background: $color-accent;
+
+      &:nth-child(1) {
+        top: 0;
+      }
+      &:nth-child(2) {
+        top: 9px;
+      }
+      &:nth-child(3) {
+        top: 18px;
+      }
     }
-    &:nth-child(2) {
-      top: 9px;
-    }
-    &:nth-child(3) {
-      top: 18px;
+
+    &.active span {
+      &:nth-child(1) {
+        top: 9px;
+
+        transform: rotate(135deg);
+      }
+      &:nth-child(2) {
+        left: -30px;
+
+        opacity: 0;
+      }
+      &:nth-child(3) {
+        top: 9px;
+
+        transform: rotate(-135deg);
+      }
     }
   }
-
-  &.active span {
-    &:nth-child(1) {
-      top: 9px;
-      transform: rotate(135deg);
-    }
-    &:nth-child(2) {
-      opacity: 0;
-      left: -30px;
-    }
-    &:nth-child(3) {
-      top: 9px;
-      transform: rotate(-135deg);
-    }
-  }
-}
 }
