--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,4 +11,7 @@
 @use "sections/header/header-navbar";
 @use "sections/header/header-content";
 
+
+
 @use "sections/main";
+@use "sections/brands";
