--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,14 +1,16 @@
 @use "../presets" as *;
-
+@use "../mixins/" as *;
 
 *,
 ::before,
 ::after {
   box-sizing: border-box;
 }
+
 html {
   font-size: 16px;
 }
+
 body {
   overflow-x: hidden;
 
@@ -18,8 +20,46 @@ body {
   font-size: 15px;
   font-weight: 400;
 }
+
 a {
   text-decoration: none;
 
   color: $color-black;
 }
+
+h1 {
+  font-weight: 600;
+  line-height: 1.08;
+
+ 
+  @include xl-min {
+    font-size: 65px;
+  }
+  @include xl-lg {
+    font-size: 50px;
+  }
+  @include lg {
+    padding-right: 50px;
+    padding-left: 50px;
+
+    text-align: center;
+
+    font-size: 40px;
+  }
+}
+
+h2 {
+  
+  font-weight: 600;
+  line-height: 1.2;
+text-align: center;
+@include xl-min {
+  font-size: 50px;
+}
+@include xl-lg {
+  font-size: 40px;
+}
+@include lg {
+  font-size: 30px;
+}
+  }
