--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,6 +361,52 @@ template {
   font-display: swap;
   src: url("../fonts/GraphikLCG-Semibold.woff2") format("woff2"), url("../fonts/GraphikLCG-Semibold.woff") format("woff");
 }
+.work, .quality, .time, .control {
+  margin-top: 100px;
+  margin-bottom: 125px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.work__title, .quality__title, .time__title, .control__title {
+  margin: 0;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.work__content, .quality__content, .time__content, .control__content {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-preferred-size: 200px;
+      flex-basis: 200px;
+}
+
+.work__description, .quality__description, .time__description, .control__description {
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+.work__picture, .quality__picture, .time__picture, .control__picture {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-preferred-size: 200px;
+      flex-basis: 200px;
+}
+
+.work__image, .quality__image, .time__image, .control__image {
+  width: 100%;
+}
+
+.work__btn, .quality__btn, .time__btn, .control__btn {
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
 *,
 ::before,
 ::after {
@@ -396,6 +442,10 @@ h2 {
   text-align: center;
 }
 
+a {
+  display: block;
+}
+
 .container {
   max-width: 1380px;
   margin: 0 auto;
@@ -421,6 +471,22 @@ h2 {
   color: #ffffff;
   border-color: #ff6336;
   background-color: #ff6336;
+}
+
+.btn--dark {
+  color: #ffffff;
+  border-color: #000000;
+  background-color: #000000;
+}
+
+.btn--md {
+  min-width: 160px;
+  min-height: 45px;
+}
+
+u {
+  text-decoration: none;
+  border-bottom: 1px solid;
 }
 
 .header {
@@ -566,22 +632,304 @@ h2 {
 }
 .brands__title {
   margin: 0 0 40px;
-  line-height: 1.2;
-  text-align: center;
 }
 .brands__list {
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px 20px;
+}
+
+.time {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+.work {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+.opportunities {
+  background-color: #FFF8E4;
+  padding: 120px 0;
+}
+.opportunities__title {
+  margin: 0 0 80px;
+}
+.opportunities__content {
+  display: grid;
+}
+
+.opportunity-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  font-size: 18px;
+}
+.opportunity-item__title {
+  margin: 0;
+}
+.opportunity-item__description {
+  margin: 0;
+}
+.opportunity-item__picture {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+}
+
+.productivity__title {
+  text-align: center;
+  padding-top: 50px;
+}
+.productivity-content {
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  gap: 30px;
+}
+
+.productivity-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 410px;
+  font-size: 20px;
+  padding-bottom: 190px;
+}
+.productivity-item__title {
+  margin: 0;
+}
+.productivity-item__description {
+  margin: 0;
+}
+.productivity-item__picture {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+  margin-top: 15px;
+}
+
+.comment {
+  background-color: #c9e8f2;
+  min-height: 470px;
+  padding-top: 50px;
+}
+.comment-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 45px;
+     -moz-column-gap: 45px;
+          column-gap: 45px;
+  padding-bottom: 100px;
+}
+.comment-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 200px;
+      flex-basis: 200px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  padding-top: 10px;
+}
+.comment-content__description {
+  padding-bottom: 20px;
+}
+.comment-content__name {
+  margin-bottom: 10px;
+}
+
+.rating {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #dabc98;
+}
+.rating-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+}
+.rating-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+.rating-header__title {
+  padding-left: 50px;
+  padding-right: 20px;
+  text-align: left;
+  font-size: 35px;
+}
+.rating-header__image {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+}
+
+.rating-logo {
+  padding-left: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 100%;
-  overflow: hidden;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 100px;
+}
+
+.integrate {
+  padding-bottom: 130px;
+}
+.integrate__title {
+  font-size: 65px;
+  line-height: 75px;
+  font-weight: 600;
+}
+.integrate__description {
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+}
+.integrate__image {
+  width: 100%;
+  padding: 25px 0 25px;
+}
+.integrate__action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.integrate__button {
+  border: none;
+  padding: 20px;
+}
+
+.trial {
+  background-color: #ff9c7d;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  margin: 0;
+}
+.trial-content {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
+}
+.trial__description {
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+  margin-top: 0;
+}
+.trial__button {
+  padding: 15px 30px;
+}
+
+.footer-container {
+  background-color: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-flex: 3;
+      -ms-flex-positive: 3;
+          flex-grow: 3;
+  min-width: 1380px;
+}
+
+.footer {
+  background-color: #cccccc;
+  margin-top: -42px;
+  padding-top: 50px;
+  padding-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.footer-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+.footer-menu__picture {
+  -webkit-box-ordinal-group: 0;
+      -ms-flex-order: -1;
+          order: -1;
+}
+.footer-navbar__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
 }
 @media (min-width: 675px) {
   .header-menu {
@@ -596,6 +944,15 @@ h2 {
   }
 }
 @media (min-width: 992px) {
+  .work, .quality, .time, .control {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .btn--sm {
+    min-width: 120px;
+    min-height: 45px;
+  }
   .header-menu__hamburger {
     display: none;
   }
@@ -613,8 +970,14 @@ h2 {
   .header-content__image {
     width: 100%;
   }
+  .opportunities__content {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media (min-width: 1200px) {
+  .work__title, .quality__title, .time__title, .control__title {
+    font-size: 50px;
+  }
   h1 {
     font-size: 65px;
   }
@@ -641,8 +1004,48 @@ h2 {
     padding-top: 125px;
     padding-bottom: 125px;
   }
-  .brands__title {
-    font-size: 50px;
+  .brands__list {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
+    grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+  }
+  .opportunities__content {
+    padding: 0 40px;
+    gap: 110px;
+  }
+  .productivity-content {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-top: 20px;
+  }
+  .comment-content__description {
+    font-size: 30px;
+  }
+  .rating-logo {
+    border-left: 1px solid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .trial__title {
+    padding-right: 250px;
+    padding-left: 250px;
+    font-size: 65px;
+    margin: 0;
+  }
+}
+@media (min-width: 1380px) {
+  .work__content, .quality__content, .time__content, .control__content {
+    padding-right: 160px;
+  }
+}
+@media (max-width: 1379.8px) and (min-width: 1200px) {
+  .work__content, .quality__content, .time__content, .control__content {
+    padding-right: 60px;
   }
 }
 @media (max-width: 1199.8px) {
@@ -650,6 +1053,61 @@ h2 {
     padding: 0.5em 0.75em;
   }
   .header-content__description {
+    font-size: 20px;
+  }
+  .opportunities__content {
+    gap: 40px;
+  }
+  .productivity-content {
+    gap: 40px;
+  }
+  .productivity-item {
+    padding-bottom: 50px;
+  }
+  .productivity-item__description {
+    font-size: 20px;
+  }
+  .comment-content__description {
+    font-size: 25px;
+    margin-bottom: 25px;
+  }
+  .rating-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .rating-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 70px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: 1px solid;
+  }
+  .rating-header__title {
+    text-align: center;
+  }
+  .rating-logo {
+    padding-top: 20px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 100px;
+  }
+}
+@media (max-width: 1199.8px) and (max-width: 991.8px) and (min-width: 675px) {
+  .comment-content__description {
+    text-align: center;
     font-size: 20px;
   }
 }
@@ -661,6 +1119,9 @@ h2 {
   }
 }
 @media (max-width: 1199.8px) and (min-width: 992px) {
+  .work__title, .quality__title, .time__title, .control__title {
+    font-size: 40px;
+  }
   h1 {
     font-size: 50px;
   }
@@ -674,11 +1135,25 @@ h2 {
     padding-top: 100px;
     padding-bottom: 100px;
   }
-  .brands__title {
-    font-size: 40px;
+  .brands__list {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    grid-template-columns: repeat(3, minmax(50px, -webkit-max-content));
+    grid-template-columns: repeat(3, minmax(50px, max-content));
+    justify-items: center;
   }
 }
 @media (max-width: 991.8px) {
+  .work, .quality, .time, .control {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .work__title, .quality__title, .time__title, .control__title {
+    font-size: 30px;
+  }
   h1 {
     padding-right: 50px;
     padding-left: 50px;
@@ -687,6 +1162,10 @@ h2 {
   }
   h2 {
     font-size: 30px;
+  }
+  .btn--sm {
+    min-width: 100px;
+    min-height: 40px;
   }
   .header-navbar {
     position: absolute;
@@ -721,8 +1200,69 @@ h2 {
     padding-top: 80px;
     padding-bottom: 80px;
   }
-  .brands__title {
-    font-size: 30px;
+  .productivity-content {
+    grid-template-columns: 1fr;
+  }
+  .comment-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 30px;
+  }
+  .comment-container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .comment-content {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .integrate__title {
+    font-size: 50px;
+  }
+}
+@media (max-width: 991.8px) and (min-width: 675px) {
+  .brands__list {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    grid-template-columns: repeat(2, minmax(50px, -webkit-max-content));
+    grid-template-columns: repeat(2, minmax(50px, max-content));
+    justify-items: center;
+  }
+  .opportunities__content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 991.8px) and (min-width: 786px) {
+  .work, .quality, .time, .control {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 785.8px) {
+  .integrate {
+    padding-bottom: 100px;
+  }
+  .integrate__title {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .integrate__description {
+    font-size: 20px;
+  }
+  .trial__description {
+    padding-bottom: 25px;
   }
 }
 @media (max-width: 674.8px) {
@@ -749,5 +1289,24 @@ h2 {
   }
   .header-content__btn {
     min-width: 120px;
+  }
+  .brands__list {
+    justify-items: center;
+  }
+  .rating-logo2 {
+    padding-left: 20px;
+  }
+  .rating-logo {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
