--- a/assets/scss/presets/_skins.scss
+++ b/assets/scss/presets/_skins.scss
@@ -3,3 +3,5 @@ $color-black: #000000;
 $color-accent: #ff6336;
 $color-grey: #cccccc;
 $color-bg-accent: #ff9c7d;
+$color-bg-light: #FFF8E4;
+$color-bg-neutral: #dabc98;
