--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,29 +877,25 @@ u {
 }
 
 .footer-container {
-  background-color: red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
-  -webkit-box-flex: 3;
-      -ms-flex-positive: 3;
-          flex-grow: 3;
-  min-width: 1380px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 100px;
+  max-width: 1380px;
+  margin: 0 auto;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .footer {
-  background-color: #cccccc;
+  background-color: #eeeeee;
   margin-top: -42px;
   padding-top: 50px;
   padding-bottom: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
 }
 .footer-menu {
   display: -webkit-box;
@@ -909,15 +905,53 @@ u {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 20px;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  padding-right: 100px;
+}
+.footer-menu__title {
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 50px;
 }
 .footer-menu__picture {
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
+  padding-bottom: 25px;
+}
+.footer-menu__logo {
+  padding-bottom: 10px;
+}
+.footer-menu__description {
+  font-size: 20px;
+  line-height: 1.5;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  padding-bottom: 15px;
+}
+.footer-menu__action {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.5;
+}
+.footer-navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  padding-top: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-navbar__title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
 }
 .footer-navbar__item {
   display: -webkit-box;
@@ -927,10 +961,56 @@ u {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-column-gap: 10px;
-     -moz-column-gap: 10px;
-          column-gap: 10px;
+  -webkit-column-gap: 15px;
+     -moz-column-gap: 15px;
+          column-gap: 15px;
+  min-width: 200px;
 }
+.footer-navbar__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+  line-height: 15px;
+}
+
+.footer-rights-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 40px;
+  border-top: 1px solid;
+}
+
+.footer-rights__description {
+  font-size: 12px;
+  line-height: 15px;
+  max-width: 300px;
+}
+
+.footer-rights-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 @media (min-width: 675px) {
   .header-menu {
     position: absolute;
@@ -943,6 +1023,7 @@ u {
     min-width: 160px;
   }
 }
+
 @media (min-width: 992px) {
   .work, .quality, .time, .control {
     -webkit-box-align: center;
@@ -974,6 +1055,7 @@ u {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 @media (min-width: 1200px) {
   .work__title, .quality__title, .time__title, .control__title {
     font-size: 50px;
@@ -1038,16 +1120,19 @@ u {
     margin: 0;
   }
 }
+
 @media (min-width: 1380px) {
   .work__content, .quality__content, .time__content, .control__content {
     padding-right: 160px;
   }
 }
+
 @media (max-width: 1379.8px) and (min-width: 1200px) {
   .work__content, .quality__content, .time__content, .control__content {
     padding-right: 60px;
   }
 }
+
 @media (max-width: 1199.8px) {
   .header-navbar__item {
     padding: 0.5em 0.75em;
@@ -1104,13 +1189,21 @@ u {
             align-items: center;
     padding-left: 100px;
   }
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
+
 @media (max-width: 1199.8px) and (max-width: 991.8px) and (min-width: 675px) {
   .comment-content__description {
     text-align: center;
     font-size: 20px;
   }
 }
+
 @media (max-width: 1199.8px) and (min-width: 675px) {
   .header-content {
     /*ПОД БОЛЬШИМ ВОПРOСОМ*/
@@ -1118,6 +1211,7 @@ u {
     padding-bottom: 60px;
   }
 }
+
 @media (max-width: 1199.8px) and (min-width: 992px) {
   .work__title, .quality__title, .time__title, .control__title {
     font-size: 40px;
@@ -1144,6 +1238,7 @@ u {
     justify-items: center;
   }
 }
+
 @media (max-width: 991.8px) {
   .work, .quality, .time, .control {
     -webkit-box-orient: vertical;
@@ -1230,6 +1325,7 @@ u {
     font-size: 50px;
   }
 }
+
 @media (max-width: 991.8px) and (min-width: 675px) {
   .brands__list {
     -webkit-box-pack: space-evenly;
@@ -1243,6 +1339,7 @@ u {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 @media (max-width: 991.8px) and (min-width: 786px) {
   .work, .quality, .time, .control {
     width: 80%;
@@ -1250,6 +1347,7 @@ u {
     margin-right: auto;
   }
 }
+
 @media (max-width: 785.8px) {
   .integrate {
     padding-bottom: 100px;
@@ -1265,6 +1363,7 @@ u {
     padding-bottom: 25px;
   }
 }
+
 @media (max-width: 674.8px) {
   .header {
     -webkit-box-align: stretch;
