--- a/assets/scss/sections/footer/_footer.scss
+++ b/assets/scss/sections/footer/_footer.scss
@@ -7,29 +7,44 @@
   justify-content: center;
   padding-bottom: 100px;
   max-width: $ul;
-  margin: 0 auto;
-  padding-right: $gap;
-  padding-left: $gap;
+  margin-left: 30px;
+  margin-right: 30px;
+  
 
   @include xl {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
 .footer {
   background-color: #eeeeee;
-  margin-top: -42px;
+  padding-left: 40px;
+  padding-right: 40px;
   padding-top: 50px;
   padding-bottom: 40px;
 
+
   &-menu {
     display: flex;
-    flex-direction: column;
+
     align-items: center;
     justify-content: center;
     gap: $gap;
 
     padding-right: 100px;
+
+    @include xl {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-left: 20px;
+      padding-right: 20px;
+      text-align: center;
+    }
 
     &__title {
       font-weight: 600;
@@ -60,10 +75,25 @@
   }
 
   &-navbar {
-    display: flex;
+    display: grid;
     gap: 30px;
     padding-top: 30px;
     justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
+
+    @include lg {
+      gap: 20px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include md {
+      gap: 20px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include xs {
+      gap: 20px;
+      grid-template-columns: repeat(1, 1fr);
+    }
 
     &__title {
       font-weight: 600;
