--- a/assets/scss/sections/main/_integrate.scss
+++ b/assets/scss/sections/main/_integrate.scss
@@ -2,50 +2,68 @@
 @use "../../mixins/" as *;
 
 .integrate {
-padding-bottom: 130px;
+  padding-bottom: 130px;
 
-@include md {
-  padding-bottom: 100px;
-}
-
-&__title {
-  font-size: 65px;
-line-height: 75px;
-font-weight: 600;
-
-@include lg {
-  font-size: 50px;
-}
-
-@include md {
-  font-size: 40px;
-  line-height: 50px;
-}
-}
-
-&__description {
-  font-size: 25px;
-line-height: 30px;
-text-align: center;
-
-@include md {
-  font-size: 20px;
-}
-}
-
-&__image {
-  width: 100%;
-    padding: 25px 0 25px;
-}
-
-&__action {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include md {
+    padding-bottom: 100px;
   }
 
-&__button {
-  border: none;
-  padding: 20px;
-}
+  &__title {
+    font-size: 65px;
+    line-height: 75px;
+    font-weight: 600;
+
+    @include lg {
+      font-size: 50px;
+    }
+
+    @include md {
+      font-size: 40px;
+      line-height: 50px;
+    }
+  }
+
+  &__description {
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+
+    @include md {
+      font-size: 20px;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    padding: 25px 0 25px;
+  }
+
+  &__action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include md {
+      padding-top: 5px;
+      padding-bottom: 5px;
+      
+    }
+  }
+
+  &__button {
+    min-width: 100px;
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 60px;
+
+    @include md {
+      line-height: 50px;
+      padding-left: 10px;
+      padding-right: 10px;
+      
+    }
+  }
 }
