--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -887,39 +886,31 @@ u {
   padding-right: 40px;
 }
 
+.footer {
+  background-color: #eeeeee;
+  margin-top: -42px;
+  padding-top: 50px;
+  padding-bottom: 40px;
+}
 .footer-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 100px;
-  max-width: 1380px;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.footer {
-  background-color: #eeeeee;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 40px;
+  padding-bottom: 50px;
   padding-left: 40px;
   padding-right: 40px;
-  padding-top: 50px;
-  padding-bottom: 40px;
 }
 .footer-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   gap: 20px;
-  padding-right: 100px;
 }
 .footer-menu__title {
   font-weight: 600;
@@ -947,17 +938,8 @@ u {
 }
 .footer-navbar {
   display: grid;
-  gap: 30px;
   padding-top: 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  grid-template-columns: repeat(4, 1fr);
-}
-.footer-navbar__title {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 25px;
+  gap: 25px;
 }
 .footer-navbar__item {
   display: -webkit-box;
@@ -967,24 +949,26 @@ u {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-column-gap: 15px;
-     -moz-column-gap: 15px;
-          column-gap: 15px;
-  min-width: 200px;
-}
-.footer-navbar__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 15px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  max-width: 170px;
+  font-size: 15px;
   line-height: 15px;
+}
+.footer-navbar__title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 25px;
+}
+.footer-navbar__link {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .footer-rights-container {
+  padding-left: 40px;
+  padding-right: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1125,6 +1109,15 @@ u {
     font-size: 65px;
     margin: 0;
   }
+  .footer-container {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer-navbar {
+    gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 @media (min-width: 1380px) {
@@ -1200,29 +1193,17 @@ u {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    gap: 40px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-left: 30px;
-    margin-right: 30px;
   }
   .footer-menu {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-left: 20px;
-    padding-right: 20px;
     text-align: center;
+  }
+  .footer-navbar {
+    gap: 5px;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -1230,14 +1211,6 @@ u {
   .comment-content__description {
     text-align: center;
     font-size: 20px;
-  }
-}
-
-@media (max-width: 1199.8px) and (min-width: 675px) {
-  .header-content {
-    /*ПОД БОЛЬШИМ ВОПРOСОМ*/
-    padding-top: 180px;
-    padding-bottom: 60px;
   }
 }
 
@@ -1353,9 +1326,11 @@ u {
   .integrate__title {
     font-size: 50px;
   }
-  .footer-navbar {
-    gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
+  .footer-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -1409,10 +1384,6 @@ u {
     padding-left: 10px;
     padding-right: 10px;
   }
-  .footer-navbar {
-    gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
-  }
 }
 
 @media (max-width: 674.8px) {
@@ -1434,8 +1405,8 @@ u {
     gap: 30px;
   }
   .header-content {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 160px;
+    padding-bottom: 160px;
   }
   .header-content__btn {
     min-width: 120px;
@@ -1459,11 +1430,24 @@ u {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .footer-navbar {
+    gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 10px;
+  }
 }
 
 @media (max-width: 575.8px) {
+  .footer-container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   .footer-navbar {
-    gap: 20px;
+    gap: 5px;
     grid-template-columns: repeat(1, 1fr);
   }
 }
