--- a/assets/scss/sections/footer/_footer.scss
+++ b/assets/scss/sections/footer/_footer.scss
@@ -1,48 +1,45 @@
 @use "../../presets/" as *;
 @use "../../mixins/" as *;
 
-.footer-container {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  padding-bottom: 100px;
-  max-width: $ul;
-  margin-left: 30px;
-  margin-right: 30px;
-  
-
-  @include xl {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-}
-
 .footer {
   background-color: #eeeeee;
-  padding-left: 40px;
-  padding-right: 40px;
+  margin-top: -42px;
   padding-top: 50px;
   padding-bottom: 40px;
 
+  &-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding-bottom: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+
+    @include xl-min {
+    justify-content: space-between;
+  }
+    @include xl {
+      flex-direction: column;
+     gap: 40px;
+      justify-content: center;
+    }
+
+    @include lg {
+      flex-direction: column;
+    }
+
+    @include xs {
+      justify-content: center;
+      align-items: center;
+    }
+  }
 
   &-menu {
     display: flex;
-
-    align-items: center;
     justify-content: center;
     gap: $gap;
 
-    padding-right: 100px;
-
     @include xl {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding-left: 20px;
-      padding-right: 20px;
       text-align: center;
     }
 
@@ -76,47 +73,58 @@
 
   &-navbar {
     display: grid;
-    gap: 30px;
     padding-top: 30px;
-    justify-content: center;
-    grid-template-columns: repeat(4, 1fr);
+    gap: 25px;
 
-    @include lg {
+    @include xl-min {
       gap: 20px;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(4, 1fr);
     }
-    @include md {
-      gap: 20px;
+
+    @include xl {
+      gap: 5px;
+      grid-template-columns: repeat(4, 1fr);
+    }
+    @include sm {
+      gap: 5px;
       grid-template-columns: repeat(2, 1fr);
+      padding-top: 10px;
     }
 
     @include xs {
-      gap: 20px;
+      gap: 5px;
       grid-template-columns: repeat(1, 1fr);
+      
     }
 
+    &__item {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      max-width: 170px;
+      font-size: 15px;
+      line-height: 15px;
+
+      @include xs {
+        
+      }
+    }
     &__title {
       font-weight: 600;
       font-size: 20px;
       line-height: 25px;
     }
 
-    &__item {
-      display: flex;
-      flex-direction: column;
-      column-gap: 15px;
-      min-width: 200px;
-    }
-    &__list {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      line-height: 15px;
+    &__link {
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
   }
 }
 
 .footer-rights-container {
+  padding-left: 40px;
+  padding-right: 40px;
   display: flex;
   align-items: center;
   justify-content: space-between;
